<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaPlanRengi">

    <EditText
        android:id="@+id/et_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/profil_buton"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:elevation="8dp"
        android:ems="10"
        android:fontFamily="@font/alta"
        android:hint="@string/ad"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:shadowColor="@android:color/holo_red_dark" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/profil_buton"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:elevation="8dp"
        android:ems="10"
        android:fontFamily="@font/alta"
        android:hint="@string/eposta"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/profil_buton"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:elevation="8dp"
        android:ems="10"
        android:fontFamily="@font/alta"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:padding="20dp" />

    <Button
        android:id="@+id/btn_kaydol"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_below="@+id/et_parola"
        android:layout_alignStart="@id/et_parola"
        android:layout_alignEnd="@id/et_parola"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/profil_buton"
        android:backgroundTint="@color/yaziRengi"
        android:elevation="16dp"
        android:fontFamily="@font/alta"
        android:text="@string/kaydol"
        android:textAllCaps="false"
        android:textColor="@color/arkaPlanRengi"
        android:theme="@android:style/Theme.NoTitleBar" />

</RelativeLayout>